--- a/app/src/main/res/menu/edit_budget_list_menu.xml
+++ b/app/src/main/res/menu/edit_budget_list_menu.xml
@@ -18,4 +18,10 @@
         android:icon="@drawable/ic_people_black_24dp"
         android:iconTint="?attr/buttonColor"
         />
+    <item
+        android:id="@+id/edit_sort_expenses_menu_item"
+        android:orderInCategory="3"
+        android:title="@string/edit_budget_sort"
+        app:showAsAction="ifRoom"
+        />
 </menu>
