-added sort button to budgetlist fragment

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -10,7 +10,7 @@
         <item>reply_all</item>
     </string-array>
 
-    <string-array name="sort_by_values">
+    <string-array name="sort_by_expenses_values">
         <item>Categories</item>
         <item>Name</item>
         <item>Due date(from earliest)</item>
@@ -18,5 +18,15 @@
         <item>Amount(from lowest)</item>
         <item>Amount(from highest)</item>
         <item>Last edited by user</item>
+    </string-array>
+
+    <string-array name="sort_by_budget_list_values">
+        <item>Name</item>
+        <item>Due date(from earliest)</item>
+        <item>Due date(from latest)</item>
+        <item>Amount(from lowest)</item>
+        <item>Amount(from highest)</item>
+        <item>Remaining amount(from lowest)</item>
+        <item>Remaining amount(from highest)</item>
     </string-array>
 </resources>
