--- a/app/src/main/res/layout/expense_item.xml
+++ b/app/src/main/res/layout/expense_item.xml
@@ -23,12 +23,21 @@
             android:textColor="?attr/textColor"/>
 
         <TextView
+            android:id="@+id/expense_item_category_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="35dp"
+            android:text="#15"
+            android:textSize="18sp"
+            android:textColor="?attr/textColor"/>
+
+        <TextView
             android:id="@+id/expense_item_owner_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
-            android:text="#20"
-            android:textSize="20sp"
+            android:text="#15"
+            android:textSize="15sp"
             android:textColor="?attr/textColor"
             />
 
