-added starting date for budget lists. Now user can set beginning date for new list and ending date for new list (same rules apply for editing) -changed spinner item layout, now it has image next to category name (atm static image will be loaded from database in the future) -reworked namespaces, optimalized imports and created date utils removing need to create new simple date formats for every date parse and format

--- a/app/src/main/res/menu/edit_budget_list_menu.xml
+++ b/app/src/main/res/menu/edit_budget_list_menu.xml
@@ -8,13 +8,14 @@
         android:id="@+id/edit_budget_list_menu_item"
         android:orderInCategory="2"
         android:title="@string/edit_budget_list"
-        app:showAsAction="ifRoom"
+        app:showAsAction="never"
         />
+
     <item
         android:id="@+id/edit_budget_users_menu_item"
         android:orderInCategory="1"
         android:title="@string/edit_budget_users"
-        app:showAsAction="ifRoom"
+        app:showAsAction="always"
         android:icon="@drawable/ic_people_black_24dp"
         android:iconTint="?attr/buttonColor"
         />
@@ -22,6 +23,6 @@
         android:id="@+id/edit_sort_expenses_menu_item"
         android:orderInCategory="3"
         android:title="@string/edit_budget_sort"
-        app:showAsAction="ifRoom"
+        app:showAsAction="never"
         />
 </menu>
