--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <SwitchPreferenceCompat
         android:defaultValue="false"
         android:key="@string/dark_mode_preference_key"
         android:summaryOff="Off"
         android:summaryOn="On"
         android:title="@string/dark_mode_preference_title" />
+    <DropDownPreference
+        android:defaultValue="en"
+        android:key="@string/language_preference_key"
+        app:title="@string/language_preference_title"
+        app:entries="@array/language_list_names"
+        app:entryValues="@array/language_list_values"
+        app:useSimpleSummaryProvider="true"
+        />
 </PreferenceScreen>
