--- a/app/src/main/res/layout/fragment_new_budget_list.xml
+++ b/app/src/main/res/layout/fragment_new_budget_list.xml
@@ -30,7 +30,7 @@
             android:hint="@string/new_budget_list_name_hint"
             android:textColor="?attr/textColor"
             android:textColorHint="?attr/toolbarColor"
-            android:inputType="text"
+            android:inputType="textCapSentences"
             />
 
         <TextView
@@ -93,31 +93,62 @@
             android:visibility="invisible" />
 
         <TextView
-            android:id="@+id/new_budget_list_due_date_text_view"
+            android:id="@+id/new_budget_list_starting_date_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/new_budget_list_amount_error_text_view"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
-            android:text="@string/new_budget_list_due_date_prompt"
+            android:text="@string/new_budget_list_starting_date_prompt"
             android:textColor="?attr/textColor" />
 
         <CalendarView
-            android:id="@+id/new_budget_list_calendar_view"
+            android:id="@+id/new_budget_list_starting_date_calendar_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/new_budget_list_due_date_text_view"
+            android:layout_below="@+id/new_budget_list_starting_date_text_view"
             android:layout_centerHorizontal="true"
             android:dateTextAppearance="@style/CalenderViewDateCustomText"
             android:theme="@style/CalenderViewCustom"
             android:weekDayTextAppearance="@style/CalenderViewWeekCustomText"
             />
 
+        <TextView
+            android:id="@+id/new_budget_list_ending_date_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/new_budget_list_starting_date_calendar_view"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
+            android:text="@string/new_budget_list_ending_date_prompt"
+            android:textColor="?attr/textColor" />
+        <CalendarView
+            android:id="@+id/new_budget_list_ending_date_calendar_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/new_budget_list_ending_date_text_view"
+            android:layout_centerHorizontal="true"
+            android:dateTextAppearance="@style/CalenderViewDateCustomText"
+            android:theme="@style/CalenderViewCustom"
+            android:weekDayTextAppearance="@style/CalenderViewWeekCustomText"
+            />
+
+        <TextView
+            android:id="@+id/new_budget_list_date_error_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/new_budget_list_ending_date_calendar_view"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="2dp"
+            android:text="@string/new_budget_list_date_error"
+            android:textColor="@color/login_error_color"
+            android:visibility="invisible" />
+
         <Button
             android:id="@+id/new_budget_list_button_cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/new_budget_list_calendar_view"
+            android:layout_below="@id/new_budget_list_date_error_text_view"
             android:layout_alignParentStart="true"
             android:layout_marginStart="10dp"
             android:backgroundTint="?attr/buttonColor"
@@ -128,7 +159,7 @@
             android:id="@+id/new_budget_list_button_confirm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/new_budget_list_calendar_view"
+            android:layout_below="@id/new_budget_list_date_error_text_view"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="10dp"
             android:backgroundTint="?attr/buttonColor"
