--- a/app/src/main/res/layout/fragment_new_expense.xml
+++ b/app/src/main/res/layout/fragment_new_expense.xml
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
-            android:text="@string/new_budget_list_name_prompt"
+            android:text="@string/new_expense_list_name_prompt"
             android:textColor="?attr/textColor"
             />
 
@@ -27,10 +27,10 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
             android:backgroundTint="?attr/toolbarColor"
-            android:hint="@string/new_budget_list_name_hint"
+            android:hint="@string/new_expense_list_name_hint"
             android:textColor="?attr/textColor"
             android:textColorHint="?attr/toolbarColor"
-            android:inputType="text"
+            android:inputType="textCapSentences"
             android:maxLength="30"
             />
 
@@ -41,7 +41,7 @@
             android:layout_below="@+id/new_expense_name_edit_text"
             android:layout_marginStart="10dp"
             android:layout_marginTop="2dp"
-            android:text="@string/new_budget_list_name_error"
+            android:text="@string/new_expense_list_name_error"
             android:textColor="@color/login_error_color"
             android:visibility="invisible" />
 
@@ -52,7 +52,7 @@
             android:layout_below="@+id/new_expense_name_error_text_view"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
-            android:text="@string/new_budget_list_value_prompt"
+            android:text="@string/new_expense_list_value_prompt"
             android:textColor="?attr/textColor" />
 
         <EditText
@@ -64,7 +64,7 @@
             android:layout_marginTop="5dp"
             android:backgroundTint="?attr/toolbarColor"
             android:ems="10"
-            android:hint="@string/new_budget_list_value_hint"
+            android:hint="@string/new_expense_list_value_hint"
             android:textColor="?attr/textColor"
             android:textColorHint="?attr/toolbarColor"
             android:inputType="numberDecimal"/>
@@ -87,7 +87,7 @@
             android:layout_below="@+id/new_expense_amount_edit_text"
             android:layout_marginStart="10dp"
             android:layout_marginTop="2dp"
-            android:text="@string/new_budget_list_value_error"
+            android:text="@string/new_expense_list_value_error"
             android:textColor="@color/login_error_color"
             android:visibility="invisible" />
 
@@ -118,7 +118,7 @@
             android:layout_below="@+id/new_expense_spinner"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
-            android:text="@string/new_budget_list_due_date_prompt"
+            android:text="@string/new_expense_list_due_date_prompt"
             android:textColor="?attr/textColor" />
 
         <CalendarView
@@ -140,7 +140,7 @@
             android:layout_alignParentStart="true"
             android:layout_marginStart="10dp"
             android:backgroundTint="?attr/buttonColor"
-            android:text="@string/new_budget_list_cancel_button"
+            android:text="@string/new_expense_list_cancel_button"
             android:textColor="?attr/textColor" />
 
         <Button
@@ -151,7 +151,7 @@
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="10dp"
             android:backgroundTint="?attr/buttonColor"
-            android:text="@string/new_budget_list_confirm_button"
+            android:text="@string/new_expense_list_confirm_button"
             android:textColor="?attr/textColor" />
     </RelativeLayout>
 </ScrollView>
