--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,32 +1,32 @@
 <resources>
-    <!-- Reply Preference -->
-    <string-array name="reply_entries">
-        <item>Reply</item>
-        <item>Reply to all</item>
-    </string-array>
-
-    <string-array name="reply_values">
-        <item>reply</item>
-        <item>reply_all</item>
-    </string-array>
-
     <string-array name="sort_by_expenses_values">
         <item>Categories</item>
-        <item>Name(A-Z)</item>
-        <item>Due date(from earliest)</item>
-        <item>Due date(from latest)</item>
-        <item>Amount(from lowest)</item>
-        <item>Amount(from highest)</item>
+        <item>Name (A-Z)</item>
+        <item>Due date (from earliest)</item>
+        <item>Due date (from latest)</item>
+        <item>Amount (from lowest)</item>
+        <item>Amount (from highest)</item>
         <item>Last edited by user</item>
     </string-array>
 
     <string-array name="sort_by_budget_list_values">
-        <item>Name(A-Z)</item>
-        <item>Due date(from earliest)</item>
-        <item>Due date(from latest)</item>
-        <item>Amount(from lowest)</item>
-        <item>Amount(from highest)</item>
-        <item>Remaining amount(from lowest)</item>
-        <item>Remaining amount(from highest)</item>
+        <item>Name (A-Z)</item>
+        <item>Due date (from earliest)</item>
+        <item>Due date (from latest)</item>
+        <item>Amount (from lowest)</item>
+        <item>Amount (from highest)</item>
+        <item>Remaining amount (from lowest)</item>
+        <item>Remaining amount (from highest)</item>
     </string-array>
+
+    <string-array name="language_list_names">
+        <item>English</item>
+        <item>Polish</item>
+    </string-array>
+
+    <string-array name="language_list_values">
+        <item>en</item>
+        <item>pl</item>
+    </string-array>
+
 </resources>
