-added first iteration of icons to category spinner(all icons are same icon at the moment as works are in progress -added and completed add category fragment visible only to admins in drawer menu -added but not yet implemented edit/delete categories fragment visible only to admins in drawer menu -changed category entity categoryImage field type from char[] to String, insted of holding image in char array form it now holds it in base64 string

--- a/app/src/main/res/menu/navigation_drawer_menu.xml
+++ b/app/src/main/res/menu/navigation_drawer_menu.xml
@@ -25,5 +25,19 @@
             android:icon="@drawable/ic_logout"
             android:title="@string/drawer_logout" />
     </group>
+    <group>
+        <item
+            android:id="@+id/drawer_admin_add_category"
+            android:icon="@drawable/ic_baseline_category_24"
+            android:title="@string/drawer_admin_add_category"
+            android:visible="false"
+            />
+        <item
+            android:id="@+id/drawer_admin_edit_category"
+            android:icon="@drawable/ic_baseline_edit_24"
+            android:title="@string/drawer_admin_edit_category"
+            android:visible="false"
+            />
+    </group>
 
 </menu>
