-added imageView for icons on expense view, now every expense have icon depending on category of that expense. -admins now have ability to add edit and delete categories for users -fixed bugs with dates on lists (min date was being set incorrectly) -changed top app bar to change color with theme change -changed lanuch mode for settings activity to singleTop -changed stored images extension from JPEG to PNG to better suit their usage(icons) -changed serialized names of some fields to properly get and set values from database thus fixig filtering bugs aswel as few crashes -changed layout of expense items to accomodate new imageView of icons. In doing so checkboxes on expenses are now smaller

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,11 +1,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    style="@android:style/Theme.WithActionBar"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <FrameLayout
         android:id="@+id/settings"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        >
     </FrameLayout>
 </LinearLayout>
