--- a/app/src/main/res/layout/category_adapter_item.xml
+++ b/app/src/main/res/layout/category_adapter_item.xml
@@ -1,6 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:padding="2dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.cardview.widget.CardView
+        android:id="@+id/category_item_card_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:cardBackgroundColor="?attr/cardBackgroundColor"
+        tools:ignore="PrivateResource">
+
+        <ImageView
+            android:id="@+id/category_item_image_view"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:contentDescription="ICON" />
+
+        <TextView
+            android:id="@+id/category_item_name_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:layout_marginStart="65dp"
+            android:text="#25"
+            android:textColor="?attr/textColor"
+            android:textSize="25sp"
+            />
+
+
+    </androidx.cardview.widget.CardView>
+</FrameLayout>
